[package]
name = "openassets-tapyrus"
version = "0.1.0"
authors = ["azuchi <azuchi@chaintope.com>"]
license = "MIT"
description = "The implementation of the Open Assets Protocol for Rust."
repository = "https://github.com/chaintope/openassets-tapyrus"
readme = "README.md"
keywords = ["openassets", "bitcoin", "tapyrus"]

[dependencies]
tapyrus = { git = "https://github.com/chaintope/rust-tapyrus/", tag = "v0.1.0", features = ["use-serde"]}
leb128 = "0.2.3"
byteorder = "1.2"
bitcoin_hashes = "0.3"
serde = { version = "1.0"}
serde_json = "1.0"

[dependencies.hex]
version = "=0.3.2"
