[package]
name = "openassets-tapyrus"
version = "0.2.2"
authors = ["azuchi <azuchi@chaintope.com>"]
license = "MIT"
description = "The implementation of the Open Assets Protocol for Rust."
repository = "https://github.com/chaintope/openassets-tapyrus"
readme = "README.md"
keywords = ["openassets", "bitcoin", "tapyrus"]

[dependencies]
tapyrus = { version = "^0.4.1", features = ["use-serde"]}
leb128 = "0.2"
byteorder = "1.3"
bitcoin_hashes = "0.7"
serde = { version = "1.0"}
serde_json = "1.0"
hex = "0.4"
